--- a/package.json
+++ b/package.json
@@ -10,12 +10,24 @@
     "deploy": "npx expo export -p web && npx eas-cli@latest deploy"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@tanstack/react-query": "^5.62.0",
+    "axios": "^1.7.9",
     "expo": "^54.0.1",
     "expo-router": "~6.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.81.4",
-    "react-native-web": "^0.21.0"
+    "react-native-mmkv": "^3.1.0",
+    "react-native-web": "^0.21.0",
+    "zod": "^3.24.1",
+    "zustand": "^5.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.7",
+    "typescript": "^5.7.2"
   },
   "private": true
 }
