--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ node_modules/
 dist/
 web-build/
 expo-env.d.ts
-
+.vscode/
 # Native
 *.orig.*
 *.jks
@@ -36,3 +36,4 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+.env.example
