--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@tanstack/react-query": "^5.62.0",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "expo": "^54.0.1",
     "expo-router": "~6.0.0",
     "react": "19.1.0",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.54.2",
     "react-native": "0.81.4",
     "react-native-mmkv": "^3.1.0",
+    "react-native-safe-area-context": "^5.6.2",
     "react-native-web": "^0.21.0",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
