Add documentation files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ yarn-error.*
 
 app-example
 .env.example
+EXAMPLES.md
+POSTS_IMPLEMENTATION.md
+SETUP_GUIDE.md
+IMPLEMENTATION_SUMMARY.md
+CHECKLIST.md
+AUTH_README.md
+ARCHITECTURE.md
